# mlops_challenge

./: pyproject.toml  requirements.txt
api/: app.py
config/: params.yaml
models/: trained_model-1.0.0.joblib  trained_model-2.0.0.joblib
notebook/: notebook_ml.ipynb
src/: evaluation.py  main.py  model.py  preprocessing.py  test_preprocessing.py
src/mlruns/0/: meta.yaml
src/mlruns/518112248296827255/: meta.yaml
src/mlruns/518112248296827255/2d45009ce97d4588bf1ffe41e4a483b4/: meta.yaml
src/mlruns/518112248296827255/2d45009ce97d4588bf1ffe41e4a483b4/metrics/: MAE  R2  RMSE
src/mlruns/518112248296827255/2d45009ce97d4588bf1ffe41e4a483b4/tags/: mlflow.runName
src/mlruns/518112248296827255/97e7f0941c9641f29453172545f1a47f/: meta.yaml
src/mlruns/518112248296827255/97e7f0941c9641f29453172545f1a47f/artifacts/trained_model/: MLmodel  model.pkl
src/mlruns/518112248296827255/97e7f0941c9641f29453172545f1a47f/metrics/: MAE  R2  RMSE
src/mlruns/518112248296827255/97e7f0941c9641f29453172545f1a47f/tags/: mlflow.log-model.history  mlflow.runName  mlflow.source.git.commit
src/mlruns/518112248296827255/e03b763ae75542a895081ff16f1b85e9/: meta.yaml
src/mlruns/518112248296827255/e03b763ae75542a895081ff16f1b85e9/metrics/: MAE  R2  RMSE
src/mlruns/518112248296827255/e03b763ae75542a895081ff16f1b85e9/tags/: mlflow.log-model.history  mlflow.runName
src/mlruns/models/trained_model1.0.0/: meta.yaml
src/mlruns/models/trained_model1.0.0/version-1/: meta.yaml
src/mlruns/models/trained_model2.0.0/: meta.yaml
src/mlruns/models/trained_model2.0.0/version-1/: meta.yaml
(+4 files in other folders)
